crates/routectl-providers/tests/snapshots/legacy_equivalence/legacy_capability_config_equivalence__bedrock_converse_pass_through.snap
---
source: crates/routectl-providers/tests/legacy_capability_config_equivalence.rs
expression: body
---
{
  "additionalModelRequestFields": {
    "anthropic_beta": [
      "context-1m-2025-08-07",
      "unlisted-beta-2099-01-01"
    ],
    "diagnostics": {
      "trace_id": "abc"
    },
    "top_k": 40
  },
  "additionalModelResponseFieldPaths": [
    "/stop_sequence"
  ],
  "inferenceConfig": {
    "maxTokens": 64
  },
  "messages": [
    {
      "content": [
        {
          "text": "hello"
        }
      ],
      "role": "user"
    }
  ]
}
