crates/routectl-providers/tests/snapshots/legacy_equivalence/legacy_capability_config_equivalence__bedrock_invoke_filtered.snap
---
source: crates/routectl-providers/tests/legacy_capability_config_equivalence.rs
expression: body
---
{
  "anthropic_beta": [
    "context-1m-2025-08-07"
  ],
  "anthropic_version": "bedrock-2023-05-31",
  "max_tokens": 64,
  "messages": [
    {
      "content": "hello",
      "role": "user"
    }
  ],
  "top_k": 40
}
